--- a/requirements.txt
+++ b/requirements.txt
@@ -85,3 +85,4 @@ fuzzysearch
 img2pdf
 multicolorcaptcha
 git+https://github.com/python-telegram-bot/ptbcontrib.git
+pyyaml==6.0; python_version >= "3.6"
